--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "baseUrl": "./"
   },
   "files": ["src/main.ts"],
-  "include": ["./**/*.ts"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
